refactored synth tools

--- a/synth.ipynb
+++ b/synth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4  MULTIPOLYGON (((-120.01792 38.43586, -120.0178...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,48 +390,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID_1</th>\n",
+       "      <th>CECPlantID</th>\n",
+       "      <th>PlantName</th>\n",
+       "      <th>EIAPlantID</th>\n",
+       "      <th>RPS_Eligible</th>\n",
+       "      <th>SmallPlant</th>\n",
+       "      <th>Peaker</th>\n",
+       "      <th>Small_Hydro</th>\n",
+       "      <th>SolarThermal</th>\n",
+       "      <th>Pumped_Storage</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>COUNTY_NAME</th>\n",
+       "      <th>COUNTY_ABBREV</th>\n",
+       "      <th>COUNTY_NUM</th>\n",
+       "      <th>COUNTY_CODE</th>\n",
+       "      <th>COUNTY_FIPS</th>\n",
+       "      <th>ISLAND</th>\n",
+       "      <th>GlobalID</th>\n",
+       "      <th>SHAPE_Length</th>\n",
+       "      <th>SHAPE_Area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>B0001</td>\n",
+       "      <td>Vaca Dixon Battery Storage</td>\n",
+       "      <td>59256</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>Solano</td>\n",
+       "      <td>SOL</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>095</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{1EAB1C71-3B1D-4DD6-91DD-7ADCC5763BDE}</td>\n",
+       "      <td>2.775430</td>\n",
+       "      <td>0.242547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B0002</td>\n",
+       "      <td>Tehachapi Storage Project</td>\n",
+       "      <td>59661</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Kern</td>\n",
+       "      <td>KER</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>029</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{55F8678B-D6C9-40C4-B9A0-C3E73D2714A5}</td>\n",
+       "      <td>7.283520</td>\n",
+       "      <td>2.096255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>B0003</td>\n",
+       "      <td>Yerba Buena Battery</td>\n",
+       "      <td>59257</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>SCL</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>085</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{2220F7B9-9361-4FB8-9456-872109CF6CF7}</td>\n",
+       "      <td>3.544078</td>\n",
+       "      <td>0.343197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>B0004</td>\n",
+       "      <td>Millikan Avenue BESS</td>\n",
+       "      <td>60760</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Orange</td>\n",
+       "      <td>ORA</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>059</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{E9A24C4D-A4EC-40B5-B689-89DE5354A669}</td>\n",
+       "      <td>2.158610</td>\n",
+       "      <td>0.201290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>B0005</td>\n",
+       "      <td>Mira Loma BESS A</td>\n",
+       "      <td>60661</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>SBD</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>071</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{E4DF6870-0D0B-40C1-AD3B-A60A72792CFD}</td>\n",
+       "      <td>10.455614</td>\n",
+       "      <td>5.132310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 47 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "True"
+       "   OBJECTID_1 CECPlantID                   PlantName EIAPlantID  RPS_Eligible  \\\n",
+       "0           1      B0001  Vaca Dixon Battery Storage      59256           0.0   \n",
+       "1           2      B0002   Tehachapi Storage Project      59661           0.0   \n",
+       "2           3      B0003         Yerba Buena Battery      59257           0.0   \n",
+       "3           4      B0004        Millikan Avenue BESS      60760           0.0   \n",
+       "4           5      B0005            Mira Loma BESS A      60661           0.0   \n",
+       "\n",
+       "   SmallPlant  Peaker  Small_Hydro  SolarThermal  Pumped_Storage  ...  \\\n",
+       "0         1.0     0.0          0.0           0.0             0.0  ...   \n",
+       "1         1.0     0.0          0.0           0.0             0.0  ...   \n",
+       "2         1.0     0.0          0.0           0.0             0.0  ...   \n",
+       "3         1.0     0.0          0.0           0.0             0.0  ...   \n",
+       "4         0.0     0.0          0.0           0.0             0.0  ...   \n",
+       "\n",
+       "   OBJECTID     COUNTY_NAME  COUNTY_ABBREV  COUNTY_NUM  COUNTY_CODE  \\\n",
+       "0      48.0          Solano            SOL        48.0           48   \n",
+       "1      15.0            Kern            KER        15.0           15   \n",
+       "2      43.0     Santa Clara            SCL        43.0           43   \n",
+       "3      30.0          Orange            ORA        30.0           30   \n",
+       "4      36.0  San Bernardino            SBD        36.0           36   \n",
+       "\n",
+       "   COUNTY_FIPS  ISLAND                                GlobalID SHAPE_Length  \\\n",
+       "0          095    None  {1EAB1C71-3B1D-4DD6-91DD-7ADCC5763BDE}     2.775430   \n",
+       "1          029    None  {55F8678B-D6C9-40C4-B9A0-C3E73D2714A5}     7.283520   \n",
+       "2          085    None  {2220F7B9-9361-4FB8-9456-872109CF6CF7}     3.544078   \n",
+       "3          059    None  {E9A24C4D-A4EC-40B5-B689-89DE5354A669}     2.158610   \n",
+       "4          071    None  {E4DF6870-0D0B-40C1-AD3B-A60A72792CFD}    10.455614   \n",
+       "\n",
+       "  SHAPE_Area  \n",
+       "0   0.242547  \n",
+       "1   2.096255  \n",
+       "2   0.343197  \n",
+       "3   0.201290  \n",
+       "4   5.132310  \n",
+       "\n",
+       "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sjoined = gpd.sjoin(ca_powerplants, ca_counties, how=\"left\", predicate=\"within\")\n",
-    "# sjoined.head()\n",
-    "isinstance(dict(sjoined.dtypes)['geometry'], gpd.array.GeometryDtype)\n",
-    "\n",
+    "sjoined.head()\n",
+    "# isinstance(dict(sjoined.dtypes)['geometry'], gpd.array.GeometryDtype)\n",
     "# sjoined.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def synth_slim(res: GDF, target: GDF) -> None | GDF:\n",
+    "    try:\n",
+    "        return res[target.columns]\n",
+    "    except KeyError:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('sjoin', 'left', 'within')\n"
+      "('sjoin', 'left', 'intersects')\n"
      ]
     }
    ],
    "source": [
-    "print(synth_first(synth_sjoin(ca_powerplants, ca_counties, sjoined)))"
+    "import synth_tools as st\n",
+    "\n",
+    "print(st.synth_first(st.with_target(st.sjoin(ca_powerplants, ca_counties), sjoined)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +758,7 @@
        "4  MULTIPOLYGON (((-116.10617 32.61848, -116.1085...    06  California  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -582,12 +799,15 @@
     }
    ],
    "source": [
-    "print_all_synth(synth_merge(state_finances, state_shapes, states_with_revenue))"
+    "st.print_all_synth(\n",
+    "    st.with_target(\n",
+    "        st.merge(state_finances, state_shapes), \n",
+    "        states_with_revenue))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -599,14 +819,21 @@
       "('merge', 'inner', 'GEO_ID', 'GEOID')\n",
       "Done.\n",
       "Warning, print_all may take a loooong time\n",
+      "('sjoin', 'left', 'intersects')\n",
       "('sjoin', 'left', 'within')\n",
-      "('sjoin', 'left', 'intersects')\n"
+      "Done.\n"
      ]
     }
    ],
    "source": [
-    "print_all_synth(synth_binop(state_finances, state_shapes, states_with_revenue))\n",
-    "print_all_synth(synth_binop(ca_powerplants, ca_counties, sjoined))"
+    "st.print_all_synth(\n",
+    "    st.with_target(\n",
+    "        st.binop(state_finances, state_shapes), \n",
+    "        states_with_revenue))\n",
+    "st.print_all_synth(\n",
+    "    st.with_target(\n",
+    "        st.binop(ca_powerplants, ca_counties), \n",
+    "        sjoined))"
    ]
   }
  ],
