tried to make threaded synth

--- a/synth.ipynb
+++ b/synth.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -642,6 +642,9 @@
    ],
    "source": [
     "import synth_tools as st\n",
+    "from importlib import reload\n",
+    "\n",
+    "reload(st)\n",
     "\n",
     "print(st.synth_first(st.with_target(st.sjoin(ca_powerplants, ca_counties), sjoined)))"
    ]
@@ -807,17 +810,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning, print_all may take a loooong time\n",
-      "('merge', 'left', 'GEO_ID', 'GEOID')\n",
-      "('merge', 'inner', 'GEO_ID', 'GEOID')\n",
-      "Done.\n",
       "Warning, print_all may take a loooong time\n",
       "('sjoin', 'left', 'intersects')\n",
       "('sjoin', 'left', 'within')\n",
@@ -826,14 +825,42 @@
     }
    ],
    "source": [
-    "st.print_all_synth(\n",
-    "    st.with_target(\n",
-    "        st.binop(state_finances, state_shapes), \n",
-    "        states_with_revenue))\n",
+    "# st.print_all_synth(\n",
+    "#     st.with_target(\n",
+    "#         st.binop(state_finances, state_shapes), \n",
+    "#         states_with_revenue))\n",
     "st.print_all_synth(\n",
     "    st.with_target(\n",
     "        st.binop(ca_powerplants, ca_counties), \n",
     "        sjoined))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threaded_synth as ts\n",
+    "reload(ts)\n",
+    "ress = ts.split_over_threads(5, ts.threadsafe(st.binop(ca_powerplants, ca_counties)), sjoined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('sjoin', 'left', 'intersects'), ('sjoin', 'left', 'within')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ress)"
    ]
   }
  ],
